// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Metric export list should export all registrations of a single program regardless of status 1`] = `
{
  "id": 2,
  "paymentAmountMultiplier": 1,
  "paymentCount": 0,
  "phoneNumber": "14155237775",
  "preferredLanguage": "en",
  "programFspConfigurationLabel": "Visa debit card",
  "referenceId": "22e62864557597e0d",
  "status": "included",
}
`;

exports[`Metric export list should export all registrations of a single program regardless of status 2`] = `
{
  "id": 3,
  "paymentAmountMultiplier": 2,
  "paymentCount": 0,
  "phoneNumber": "14155236666",
  "preferredLanguage": "nl",
  "programFspConfigurationLabel": "Visa debit card",
  "referenceId": "43e62864557597e0d",
  "status": "new",
}
`;

exports[`Metric export list should export all registrations of a single program regardless of status 3`] = `
{
  "id": 4,
  "paymentAmountMultiplier": 3,
  "paymentCount": 0,
  "phoneNumber": "14155235555",
  "preferredLanguage": "nl",
  "programFspConfigurationLabel": "Visa debit card",
  "referenceId": "54e62864557597e0d",
  "status": "new",
}
`;

exports[`Metric export list should export all registrations of a single program regardless of status 4`] = `
{
  "id": 5,
  "paymentAmountMultiplier": 3,
  "paymentCount": 0,
  "phoneNumber": "14155235556",
  "preferredLanguage": "nl",
  "programFspConfigurationLabel": "Albert Heijn voucher WhatsApp",
  "referenceId": "54e62864557597e034",
  "status": "new",
}
`;

exports[`Metric export list should return all filtered registrations from 1 program using a filter and search query 1`] = `
{
  "id": 2,
  "maxPayments": null,
  "paymentAmountMultiplier": 1,
  "paymentCount": 0,
  "phoneNumber": "15005550111",
  "preferredLanguage": "en",
  "programFspConfigurationLabel": "Albert Heijn voucher paper",
  "referenceId": "reference-id-scoped-goes-pv",
  "scope": "zeeland.goes",
  "status": "new",
}
`;

exports[`Metric export list should return all filtered registrations from 1 program using a filter for included and a scoped user 1`] = `
{
  "id": 2,
  "maxPayments": null,
  "paymentAmountMultiplier": 1,
  "paymentCount": 0,
  "phoneNumber": "15005550111",
  "preferredLanguage": "en",
  "programFspConfigurationLabel": "Albert Heijn voucher paper",
  "referenceId": "reference-id-scoped-goes-pv",
  "scope": "zeeland.goes",
  "status": "new",
}
`;

exports[`Metric export list should support using "select" to retrieve a specific subset of columns 1`] = `
[
  {
    "fullName": "Juliet Marsh",
    "phoneNumber": "15005550112",
    "referenceId": "reference-id-scoped-middelburg-pv",
  },
  {
    "fullName": "Jane Doe",
    "phoneNumber": "15005550111",
    "referenceId": "reference-id-scoped-goes-pv",
  },
  {
    "fullName": "Sam Winters",
    "phoneNumber": "15005550121",
    "referenceId": "reference-id-scoped-utrecht-pv",
  },
  {
    "fullName": "Nick Brouwers",
    "phoneNumber": "15005550200",
    "referenceId": "reference-id-not-scoped-pv",
  },
]
`;
